--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,20 @@
   grid-gap: 5px;
 }
 
+.content {
+  grid-area: c;
+  background-color: #eee;
+}
 
+.content img {
+  width: 100%;
+  height: 20%;
+}
 
+.item {
+  color: green;
+}
 
-
-
+.app-wrapper-content {
+  background-color: burlywood;
+}
