setup the active Link

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,12 +1,13 @@
 .nav {
   grid-area: n;
   background-color: #ddd;
+  padding: 20px;
 }
 
-.item a {
+.item {
   color: #fff;
 }
 
-.item a.activeLink {
+.active {
   color: blue;
 }
